# kmeans-python

./: README.md  pyproject.toml
src/kmeans/: __init__.py  __main__.py
